seaqt/QtCore/gen_qtemporaryfile.nim

import ./Qt5Core_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5Core")  & " -fPIC"
{.compile("gen_qtemporaryfile.cpp", cflags).}


import ./gen_qtemporaryfile_types
export gen_qtemporaryfile_types

import
  ./gen_qcoreevent_types,
  ./gen_qfile,
  ./gen_qmetaobject_types,
  ./gen_qobject_types,
  ./gen_qobjectdefs_types
export
  gen_qcoreevent_types,
  gen_qfile,
  gen_qmetaobject_types,
  gen_qobject_types,
  gen_qobjectdefs_types

type cQTemporaryFile*{.exportc: "QTemporaryFile", incompleteStruct.} = object

proc fcQTemporaryFile_new(): ptr cQTemporaryFile {.importc: "QTemporaryFile_new".}
proc fcQTemporaryFile_new2(templateName: struct_miqt_string): ptr cQTemporaryFile {.importc: "QTemporaryFile_new2".}
proc fcQTemporaryFile_new3(parent: pointer): ptr cQTemporaryFile {.importc: "QTemporaryFile_new3".}
proc fcQTemporaryFile_new4(templateName: struct_miqt_string, parent: pointer): ptr cQTemporaryFile {.importc: "QTemporaryFile_new4".}
proc fcQTemporaryFile_metaObject(self: pointer, ): pointer {.importc: "QTemporaryFile_metaObject".}
proc fcQTemporaryFile_metacast(self: pointer, param1: cstring): pointer {.importc: "QTemporaryFile_metacast".}
proc fcQTemporaryFile_tr(s: cstring): struct_miqt_string {.importc: "QTemporaryFile_tr".}
proc fcQTemporaryFile_trUtf8(s: cstring): struct_miqt_string {.importc: "QTemporaryFile_trUtf8".}
proc fcQTemporaryFile_autoRemove(self: pointer, ): bool {.importc: "QTemporaryFile_autoRemove".}
proc fcQTemporaryFile_setAutoRemove(self: pointer, b: bool): void {.importc: "QTemporaryFile_setAutoRemove".}
proc fcQTemporaryFile_open(self: pointer, ): bool {.importc: "QTemporaryFile_open".}
proc fcQTemporaryFile_fileName(self: pointer, ): struct_miqt_string {.importc: "QTemporaryFile_fileName".}
proc fcQTemporaryFile_fileTemplate(self: pointer, ): struct_miqt_string {.importc: "QTemporaryFile_fileTemplate".}
proc fcQTemporaryFile_setFileTemplate(self: pointer, name: struct_miqt_string): void {.importc: "QTemporaryFile_setFileTemplate".}
proc fcQTemporaryFile_rename(self: pointer, newName: struct_miqt_string): bool {.importc: "QTemporaryFile_rename".}
proc fcQTemporaryFile_createLocalFile(fileName: struct_miqt_string): pointer {.importc: "QTemporaryFile_createLocalFile".}
proc fcQTemporaryFile_createLocalFileWithFile(file: pointer): pointer {.importc: "QTemporaryFile_createLocalFileWithFile".}
proc fcQTemporaryFile_createNativeFile(fileName: struct_miqt_string): pointer {.importc: "QTemporaryFile_createNativeFile".}
proc fcQTemporaryFile_createNativeFileWithFile(file: pointer): pointer {.importc: "QTemporaryFile_createNativeFileWithFile".}
proc fcQTemporaryFile_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTemporaryFile_tr2".}
proc fcQTemporaryFile_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTemporaryFile_tr3".}
proc fcQTemporaryFile_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTemporaryFile_trUtf82".}
proc fcQTemporaryFile_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTemporaryFile_trUtf83".}
proc fQTemporaryFile_virtualbase_fileName(self: pointer, ): struct_miqt_string{.importc: "QTemporaryFile_virtualbase_fileName".}
proc fcQTemporaryFile_override_virtual_fileName(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_fileName".}
proc fQTemporaryFile_virtualbase_openWithFlags(self: pointer, flags: cint): bool{.importc: "QTemporaryFile_virtualbase_openWithFlags".}
proc fcQTemporaryFile_override_virtual_openWithFlags(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_openWithFlags".}
proc fQTemporaryFile_virtualbase_size(self: pointer, ): clonglong{.importc: "QTemporaryFile_virtualbase_size".}
proc fcQTemporaryFile_override_virtual_size(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_size".}
proc fQTemporaryFile_virtualbase_resize(self: pointer, sz: clonglong): bool{.importc: "QTemporaryFile_virtualbase_resize".}
proc fcQTemporaryFile_override_virtual_resize(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_resize".}
proc fQTemporaryFile_virtualbase_permissions(self: pointer, ): cint{.importc: "QTemporaryFile_virtualbase_permissions".}
proc fcQTemporaryFile_override_virtual_permissions(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_permissions".}
proc fQTemporaryFile_virtualbase_setPermissions(self: pointer, permissionSpec: cint): bool{.importc: "QTemporaryFile_virtualbase_setPermissions".}
proc fcQTemporaryFile_override_virtual_setPermissions(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_setPermissions".}
proc fQTemporaryFile_virtualbase_close(self: pointer, ): void{.importc: "QTemporaryFile_virtualbase_close".}
proc fcQTemporaryFile_override_virtual_close(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_close".}
proc fQTemporaryFile_virtualbase_isSequential(self: pointer, ): bool{.importc: "QTemporaryFile_virtualbase_isSequential".}
proc fcQTemporaryFile_override_virtual_isSequential(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_isSequential".}
proc fQTemporaryFile_virtualbase_pos(self: pointer, ): clonglong{.importc: "QTemporaryFile_virtualbase_pos".}
proc fcQTemporaryFile_override_virtual_pos(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_pos".}
proc fQTemporaryFile_virtualbase_seek(self: pointer, offset: clonglong): bool{.importc: "QTemporaryFile_virtualbase_seek".}
proc fcQTemporaryFile_override_virtual_seek(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_seek".}
proc fQTemporaryFile_virtualbase_atEnd(self: pointer, ): bool{.importc: "QTemporaryFile_virtualbase_atEnd".}
proc fcQTemporaryFile_override_virtual_atEnd(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_atEnd".}
proc fQTemporaryFile_virtualbase_readData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QTemporaryFile_virtualbase_readData".}
proc fcQTemporaryFile_override_virtual_readData(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_readData".}
proc fQTemporaryFile_virtualbase_writeData(self: pointer, data: cstring, len: clonglong): clonglong{.importc: "QTemporaryFile_virtualbase_writeData".}
proc fcQTemporaryFile_override_virtual_writeData(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_writeData".}
proc fQTemporaryFile_virtualbase_readLineData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QTemporaryFile_virtualbase_readLineData".}
proc fcQTemporaryFile_override_virtual_readLineData(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_readLineData".}
proc fQTemporaryFile_virtualbase_reset(self: pointer, ): bool{.importc: "QTemporaryFile_virtualbase_reset".}
proc fcQTemporaryFile_override_virtual_reset(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_reset".}
proc fQTemporaryFile_virtualbase_bytesAvailable(self: pointer, ): clonglong{.importc: "QTemporaryFile_virtualbase_bytesAvailable".}
proc fcQTemporaryFile_override_virtual_bytesAvailable(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_bytesAvailable".}
proc fQTemporaryFile_virtualbase_bytesToWrite(self: pointer, ): clonglong{.importc: "QTemporaryFile_virtualbase_bytesToWrite".}
proc fcQTemporaryFile_override_virtual_bytesToWrite(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_bytesToWrite".}
proc fQTemporaryFile_virtualbase_canReadLine(self: pointer, ): bool{.importc: "QTemporaryFile_virtualbase_canReadLine".}
proc fcQTemporaryFile_override_virtual_canReadLine(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_canReadLine".}
proc fQTemporaryFile_virtualbase_waitForReadyRead(self: pointer, msecs: cint): bool{.importc: "QTemporaryFile_virtualbase_waitForReadyRead".}
proc fcQTemporaryFile_override_virtual_waitForReadyRead(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_waitForReadyRead".}
proc fQTemporaryFile_virtualbase_waitForBytesWritten(self: pointer, msecs: cint): bool{.importc: "QTemporaryFile_virtualbase_waitForBytesWritten".}
proc fcQTemporaryFile_override_virtual_waitForBytesWritten(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_waitForBytesWritten".}
proc fQTemporaryFile_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QTemporaryFile_virtualbase_event".}
proc fcQTemporaryFile_override_virtual_event(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_event".}
proc fQTemporaryFile_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QTemporaryFile_virtualbase_eventFilter".}
proc fcQTemporaryFile_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_eventFilter".}
proc fQTemporaryFile_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTemporaryFile_virtualbase_timerEvent".}
proc fcQTemporaryFile_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_timerEvent".}
proc fQTemporaryFile_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTemporaryFile_virtualbase_childEvent".}
proc fcQTemporaryFile_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_childEvent".}
proc fQTemporaryFile_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTemporaryFile_virtualbase_customEvent".}
proc fcQTemporaryFile_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_customEvent".}
proc fQTemporaryFile_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTemporaryFile_virtualbase_connectNotify".}
proc fcQTemporaryFile_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_connectNotify".}
proc fQTemporaryFile_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTemporaryFile_virtualbase_disconnectNotify".}
proc fcQTemporaryFile_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTemporaryFile_override_virtual_disconnectNotify".}
proc fcQTemporaryFile_delete(self: pointer) {.importc: "QTemporaryFile_delete".}


func init*(T: type gen_qtemporaryfile_types.QTemporaryFile, h: ptr cQTemporaryFile): gen_qtemporaryfile_types.QTemporaryFile =
  T(h: h)
proc create*(T: type gen_qtemporaryfile_types.QTemporaryFile, ): gen_qtemporaryfile_types.QTemporaryFile =
  gen_qtemporaryfile_types.QTemporaryFile.init(fcQTemporaryFile_new())

proc create*(T: type gen_qtemporaryfile_types.QTemporaryFile, templateName: string): gen_qtemporaryfile_types.QTemporaryFile =
  gen_qtemporaryfile_types.QTemporaryFile.init(fcQTemporaryFile_new2(struct_miqt_string(data: templateName, len: csize_t(len(templateName)))))

proc create*(T: type gen_qtemporaryfile_types.QTemporaryFile, parent: gen_qobject_types.QObject): gen_qtemporaryfile_types.QTemporaryFile =
  gen_qtemporaryfile_types.QTemporaryFile.init(fcQTemporaryFile_new3(parent.h))
